[package]
name = "ruzzzt"
version = "0.0.1"
authors = ["MouseProducedGames <largemouse@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "An implementation of the zzz data format."
homepage = "https://github.com/gruebite/zzz"
repository = "https://github.com/MouseProducedGames/dungen_minion"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
